--- a/calls/css/main.css
+++ b/calls/css/main.css
@@ -779,6 +779,27 @@ input {
   .table .table__row-content:hover {
     background-color: #d8ebf6; }
 
+.table__type-icon {
+  width: 2em;
+  margin: 0 auto; }
+
+.table__type-icon_incoming svg {
+  stroke: #219653; }
+
+.table__type-icon_outgoing svg {
+  stroke: #6093DE; }
+
+.table__type-icon_missed svg {
+  stroke: #eb5757; }
+
+.table__play-icon {
+  width: 2em;
+  margin: 0 auto; }
+
+.table__accepted-icon {
+  width: 2.5em;
+  margin: 0 auto; }
+
 .table__cell_content {
   cursor: pointer; }
 
@@ -910,26 +931,6 @@ input {
 
 .table__text {
   font-size: 1.6em; }
-
-.table__cell_share_active svg, .table__cell_share_active path {
-  stroke: #6093DE;
-  fill: #6093DE; }
-
-.table__cell_share_active:hover {
-  cursor: pointer; }
-
-.table__cell_share_inactive svg, .table__cell_share_inactive path {
-  stroke: #D0D3DA;
-  fill: #D0D3DA; }
-
-.table__cell_type_service {
-  color: #219653; }
-
-.table__cell_type_recall {
-  color: #eb5757; }
-
-.table__cel_type_follow {
-  color: #6093DE; }
 
 .table-mobile {
   display: none; }
@@ -1124,20 +1125,6 @@ input {
 .table-mobile__share-text {
   font-size: 2em;
   margin-right: 10px; }
-
-.table__share-btn_active {
-  border-color: #6093DE;
-  color: #6093DE; }
-  .table__share-btn_active svg, .table__share-btn_active path {
-    stroke: #6093DE;
-    fill: #6093DE; }
-
-.table__share-btn_inactive {
-  border-color: #D0D3DA;
-  color: #D0D3DA; }
-  .table__share-btn_inactive svg, .table__share-btn_inactive path {
-    stroke: #D0D3DA;
-    fill: #D0D3DA; }
 
 .table-navigation-mobile__sort {
   display: none;
@@ -1417,6 +1404,9 @@ input {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex; }
+  .controls__filter-btn, .controls__tags-btn {
+    margin-left: 0;
+    margin-right: 8px; }
   .table-navigation {
     min-height: 35px; }
   .table-navigation__content_top {
