--- a/jobs/css/main.css
+++ b/jobs/css/main.css
@@ -825,6 +825,12 @@ input {
   .table-mobile__cell-row:first-child {
     margin-bottom: 10px; }
 
+.table-mobile__cell-row_end {
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end; }
+
 .table-mobile__cell_name-wrapper {
   display: -webkit-box;
   display: -webkit-flex;
@@ -835,31 +841,7 @@ input {
       -ms-flex-align: center;
           align-items: center; }
 
-.table-mobile__cell_name {
-  margin-bottom: 2px;
-  margin-right: 8px;
-  font-size: 1.6em;
-  font-weight: 500; }
-
-.table-mobile__cell_shedule-time, .table-mobile__cell_property-type, .table-mobile__cell_type, .table-mobile__cell_status {
-  font-size: 1.4em; }
-
-.table-mobile__cell-description {
-  text-align: end; }
-
-.table-mobile__cell_type {
-  margin-bottom: 2px; }
-
-.table-mobile__cell_property-type {
-  margin-bottom: 2px; }
-
-.table-mobile__cell_status {
-  font-weight: 500; }
-
-.table-mobile__cell-fields, .table-mobile__cell-title {
-  margin-right: 8px; }
-
-.table-mobile__cell_area, .table-mobile__cell_service-resource, .table-mobile__cell_created-by {
+.table-mobile__cell-field {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -871,15 +853,49 @@ input {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
-  margin-bottom: 2px; }
+  margin-bottom: 4px; }
+  .table-mobile__cell-field:last-child {
+    margin-bottom: 0px; }
 
-.table-mobile__cell_area-label, .table-mobile__cell_service-resource-label {
+.table-mobile__cell-field-label {
   padding-right: 8px;
-  font-size: 1.4em;
+  font-size: 1.6em;
+  font-weight: 500;
   color: #8391AD; }
 
-.table-mobile__cell_area-content, .table-mobile__cell_service-resource-content {
+.table-mobile__cell-field-content {
+  font-size: 1.4em; }
+
+.table-mobile__cell_name_title {
+  margin-bottom: 2px;
+  margin-right: 8px;
+  font-size: 1.6em;
+  font-weight: 500; }
+
+.table-mobile__cell_appointments {
+  font-size: 1.4em; }
+
+.table-mobile__cell_appointments-number {
+  font-weight: 500; }
+
+.table-mobile__cell-description {
+  text-align: end; }
+
+.table-mobile__cell_paid, .table-mobile__cell_total {
+  margin-bottom: 2px;
   font-size: 1.2em; }
+
+.table-mobile__cell_paid-number, .table-mobile__cell_total-number {
+  margin-left: 5px;
+  font-weight: 500; }
+
+.table-mobile__cell_property-type {
+  margin-bottom: 2px;
+  font-size: 1.4em; }
+
+.table-mobile__cell_status {
+  font-size: 1.4em;
+  font-weight: 500; }
 
 .table-mobile__cell-info {
   text-align: end;
@@ -889,122 +905,24 @@ input {
   margin-bottom: 2px; }
 
 .table-mobile__cell_created-by {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: end;
   -webkit-justify-content: flex-end;
       -ms-flex-pack: end;
-          justify-content: flex-end; }
+          justify-content: flex-end;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
 
 .table-mobile__cell_created-by-content {
   padding-left: 8px; }
-
-.popup-window {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  z-index: 5;
-  opacity: 0;
-  pointer-events: none; }
-
-.popup-window_active {
-  opacity: 1;
-  pointer-events: auto; }
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #6093DE;
-  opacity: .25;
-  z-index: -1; }
-
-.table-mobile__popup {
-  background-color: #ffffff;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-  padding: 25px;
-  margin: 0 10px;
-  width: 100%;
-  border-radius: 6px; }
-
-.table-mobile__popup_name {
-  -webkit-flex-basis: 40%;
-      -ms-flex-preferred-size: 40%;
-          flex-basis: 40%;
-  font-size: 2.5em;
-  text-align: center;
-  padding: 8px 25px;
-  border: 2px solid #6093DE;
-  border-radius: 6px;
-  white-space: nowrap; }
-
-.table-mobile__popup_share-btn {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-flex-basis: 40%;
-      -ms-flex-preferred-size: 40%;
-          flex-basis: 40%;
-  padding: 8px 25px;
-  border: 2px solid #6093DE;
-  border-radius: 6px; }
-  .table-mobile__popup_share-btn svg {
-    width: 2.4em; }
-
-.table-mobile__share-text {
-  font-size: 2em;
-  margin-right: 10px; }
-
-.table__share-btn_active {
-  border-color: #6093DE;
-  color: #6093DE; }
-  .table__share-btn_active svg, .table__share-btn_active path {
-    stroke: #6093DE;
-    fill: #6093DE; }
-
-.table__share-btn_inactive {
-  border-color: #D0D3DA;
-  color: #D0D3DA; }
-  .table__share-btn_inactive svg, .table__share-btn_inactive path {
-    stroke: #D0D3DA;
-    fill: #D0D3DA; }
 
 .table-navigation-mobile__sort {
   display: none;
@@ -1152,7 +1070,7 @@ input {
   opacity: 1;
   pointer-events: auto; }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1330px) {
   .table {
     display: none; }
   .table-mobile {
@@ -1296,16 +1214,7 @@ input {
   #table-navigation__rows-amount_top {
     margin-right: 8px; }
   .table-navigation__rows-amount-select {
-    margin-top: 5px; }
-  .table-mobile__popup_name, .table-mobile__popup_share-btn {
-    -webkit-flex-basis: 45%;
-        -ms-flex-preferred-size: 45%;
-            flex-basis: 45%;
-    padding: 8px 15px; }
-  .table-mobile__popup_name, .table-mobile__share-text {
-    font-size: 1.8em; }
-  .table-mobile__popup_share-btn svg {
-    width: 1.7em; } }
+    margin-top: 5px; } }
 
 @media screen and (max-width: 390px) {
   .dashboard__item-number {
@@ -1335,10 +1244,4 @@ input {
   .table-navigation-mobile__sort-list {
     top: 35px; }
   .table-navigation-mobile__sort-label {
-    padding-right: 0; }
-  .table-mobile__popup_name, .table-mobile__popup_share-btn {
-    padding: 8px; }
-  .table-mobile__popup_name, .table-mobile__share-text {
-    font-size: 1.6em; }
-  .table-mobile__popup_share-btn svg {
-    width: 1.5em; } }
+    padding-right: 0; } }
