--- a/calls/css/main.css
+++ b/calls/css/main.css
@@ -346,7 +346,7 @@ input {
   left: 0;
   white-space: nowrap; }
 
-.controls__tags-items {
+.controls__tags-items, .controls-mobile__tags-items, .table__filter-items {
   max-height: 223px;
   overflow-y: auto; }
 
@@ -1267,7 +1267,8 @@ input {
   background-color: #7b7b7d; }
 
 .table__record-play-btn {
-  width: 2em; }
+  width: 3.5em;
+  cursor: pointer; }
 
 .table__record-range {
   display: -webkit-box;
@@ -1278,12 +1279,13 @@ input {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
   margin: 0 1em; }
 
 .table__record-range-container {
-  width: 9.5em;
-  height: 0.16em;
-  margin: 0 0.5em;
+  width: 100%;
+  height: 0.2em;
+  margin: 0 1em;
   z-index: 2;
   position: relative; }
   .table__record-range-container input {
@@ -1334,6 +1336,9 @@ input {
   height: 6rem;
   width: 100%; }
 
+.table__record-range-timing {
+  font-size: 1.4em; }
+
 .table__record-range-timing_now {
   color: #ffffff; }
 
@@ -1341,6 +1346,7 @@ input {
   color: rgba(255, 255, 255, 0.7); }
 
 .popup__container {
+  width: 560px;
   padding: 25px 0px;
   background-color: #ffffff;
   border-radius: 6px; }
@@ -1402,7 +1408,13 @@ input {
         -ms-flex-align: center;
             align-items: center; }
   .table-navigation__content {
-    left: 15px; } }
+    left: 15px; }
+  .popup__container {
+    width: 80%;
+    max-width: 480px;
+    min-width: 320px; }
+  .table__play-btn {
+    margin: initial; } }
 
 @media screen and (max-width: 998px) {
   .dashboard__item-number {
